--- a/SecondKadaiApp/Base.lproj/Main.storyboard
+++ b/SecondKadaiApp/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,97 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SecondKadaiApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p8A-ha-PdL">
+                                <rect key="frame" x="100" y="211" width="175" height="30"/>
+                                <state key="normal" title="挨拶"/>
+                                <connections>
+                                    <segue destination="CWE-gf-gbR" kind="show" id="SMh-qf-hYu"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="ここに入力" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qOv-O4-v4S">
+                                <rect key="frame" x="100" y="161" width="175" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <attributedString key="userComments">
+                                    <fragment content="ここに入力"/>
+                                </attributedString>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="名前を入力してください" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RgM-qk-eZE">
+                                <rect key="frame" x="75" y="120" width="225" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="qOv-O4-v4S" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="100" id="GNa-ZM-pwy"/>
+                            <constraint firstItem="p8A-ha-PdL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="100" id="Jg0-9L-czJ"/>
+                            <constraint firstItem="RgM-qk-eZE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="75" id="KhL-c4-pQR"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="p8A-ha-PdL" secondAttribute="trailing" constant="100" id="Oio-eo-1J3"/>
+                            <constraint firstItem="qOv-O4-v4S" firstAttribute="top" secondItem="RgM-qk-eZE" secondAttribute="bottom" constant="20" id="abc-rr-fem"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="RgM-qk-eZE" secondAttribute="trailing" constant="75" id="auy-Hc-toF"/>
+                            <constraint firstItem="RgM-qk-eZE" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="dl4-WS-tAR"/>
+                            <constraint firstItem="p8A-ha-PdL" firstAttribute="top" secondItem="qOv-O4-v4S" secondAttribute="bottom" constant="20" id="fBb-Gm-FUt"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="qOv-O4-v4S" secondAttribute="trailing" constant="100" id="qvp-4h-lGt"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="textField" destination="qOv-O4-v4S" id="vMO-Az-5uN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="221.59999999999999" y="26.53673163418291"/>
+        </scene>
+        <!--Result View Controller-->
+        <scene sceneID="XIE-SR-Z1U">
+            <objects>
+                <viewController id="CWE-gf-gbR" customClass="ResultViewController" customModule="SecondKadaiApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="YnH-gz-UBd">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wpq-g3-Jpw">
+                                <rect key="frame" x="100" y="211" width="175" height="30"/>
+                                <state key="normal" title="戻る"/>
+                                <connections>
+                                    <segue destination="I5b-Xa-jey" kind="unwind" unwindAction="unwind:" id="3WK-rK-nY4"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="result" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r0Q-47-Yn3">
+                                <rect key="frame" x="75" y="120" width="225" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="68g-Ez-Odu" firstAttribute="trailing" secondItem="wpq-g3-Jpw" secondAttribute="trailing" constant="100" id="3Ty-iv-Wob"/>
+                            <constraint firstItem="wpq-g3-Jpw" firstAttribute="top" secondItem="r0Q-47-Yn3" secondAttribute="bottom" constant="70" id="3hO-Nq-tJ3"/>
+                            <constraint firstItem="wpq-g3-Jpw" firstAttribute="leading" secondItem="68g-Ez-Odu" secondAttribute="leading" constant="100" id="Vcm-V6-904"/>
+                            <constraint firstItem="68g-Ez-Odu" firstAttribute="trailing" secondItem="r0Q-47-Yn3" secondAttribute="trailing" constant="75" id="biy-x9-ycb"/>
+                            <constraint firstItem="r0Q-47-Yn3" firstAttribute="leading" secondItem="68g-Ez-Odu" secondAttribute="leading" constant="75" id="gfc-J1-OA9"/>
+                            <constraint firstItem="r0Q-47-Yn3" firstAttribute="top" secondItem="68g-Ez-Odu" secondAttribute="top" constant="100" id="yPk-WB-dXi"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="68g-Ez-Odu"/>
+                    </view>
+                    <connections>
+                        <outlet property="label" destination="r0Q-47-Yn3" id="8FT-lA-08q"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PjD-yd-Uvw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="I5b-Xa-jey" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="853.60000000000002" y="26.53673163418291"/>
         </scene>
     </scenes>
 </document>
